syntax = "proto3";
option go_package = "api/v1;greeter";
package greeter.v1;

import "validate/validate.proto";

message SayHelloRequest {
  int64 waiterId = 1 [(validate.rules).int64.gt = 0];
}

message SayHelloReply {
  string message = 1;
}

service GreeterService {
  rpc SayHello(SayHelloRequest) returns (SayHelloReply) {}
}